add api get all, create, delete comment in post
